# Projec-Bot

./: .gitignore   CMakeLists.txt  README.md  config.json  main.c
 src/: components.h
 src/app/: astra.c  astra.h
 src/bot_brain/: astra.c  astra.h
 src/button_module/: button_module.c  button_module.h
 src/config/: config.c  config.h
 src/config/cJSON/: cJSON.c
 src/display_module/: display_module.c  display_module.h
 src/edge_detector/: edge_detector.h
 src/line_tracker/: line_tracker.c
 src/nfc_reader/: nfc_reader.c
 src/ultrasonic/: ultrasonic.c  ultrasonic.h
Module Architecture/:  Dependency Overview  Architecture
untitled folder/: CMakeLists.txt
untitled folder/ src/edge_detector/: edge_detector.c
untitled folder/ src/line_tracker/: line_tracker.h
untitled folder/ src/nfc_reader/: nfc_reader.h
untitled folder/Module Architecture/: Architecture  Project stracture
